Alteraçoes para enviar para o meu repositorio.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 </head>
 <body>
     <h1 id="title">Paleta de Cores</h1>
+    <section id="color-palette"></section>
+    <section id="button-section">
+        <button id="clear-board">Limpar</button>
+        <input type="number" id="board-size" min="1">
+        <button id="generate-board">VQV</button>
+    </section>
     <script src="script.js"></script>
 </body>
 </html>
